# I1I2I3

./: .gitignore  README.md
I1/day01/problems/03/: p03.c
I1/day01/problems/04/: p04.c
I1/day01/problems/05/: .gdb_history  p05.c
I1/day01/problems/06/: p06.c
I1/day01/problems/07/: hoge.txt  p07.c
I1/day01/problems/08/: p08.c
I1/day02/: 13.raw  a.out  doremi.c  doremi.raw  read_data.c  sin.c  test.raw
I1/day04/: 3-downed.txt  3528_downed.raw  baaka.raw  doremi_after.raw  doremi_band.aup  doremi_band.raw  doremi_band128.raw  doremi_band64.raw  doremi_band8.raw  doremi_band_2.raw  down  downsample.c  dq1.raw  fft  fft.c  fft_2  masami-nagasawa.raw  obama.raw  read_data  read_data2.c  seiji.raw  seiji2.raw  sin  takeshi.raw
I2/day05/: 10.client.sh  10.server.sh  5-9-client.sh  5-9-server.sh  request  response
I2/day06/: client_recv  client_send_recv  client_send_recv.c  tmp.raw
I2/day08/: client.sh  client_recv  client_recv.c  phone  phone.c  phone.sh  serv_send  serv_send.c  serv_send2  serv_send2.c  server.sh
I3/: #phone.cpp#  .#phone.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client.sh  cmake_install.cmake  connect.cpp  connect.hpp  die.cpp  die.hpp  img.hpp  log.cpp  phone  phone.c  phone.cpp  server.sh  std-err.txt  video.cpp  video.hpp  voice.cpp  voice.hpp  voice.hpp~
I3/idea/: README.md
I3/img/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  img.hpp  phone.cpp
I3/sound/: end.raw  for_horyu.raw
I3/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp  test_img.cpp
(+19 files in other folders)
